--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-server-micro": "^2.18.2",
+    "graphql": "^15.3.0",
     "next": "9.5.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
